--- a/LearnAlgorithms/LearnAlgorithms.csproj
+++ b/LearnAlgorithms/LearnAlgorithms.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CycleType.cs" />
     <Compile Include="FindAlgorithms.cs" />
     <Compile Include="OtherAlgorithms.cs" />
     <Compile Include="Program.cs" />
