--- a/LearnAlgorithms/LearnAlgorithms.csproj
+++ b/LearnAlgorithms/LearnAlgorithms.csproj
@@ -45,7 +45,7 @@
   <ItemGroup>
     <Compile Include="CycleType.cs" />
     <Compile Include="Enums\Month.cs" />
-    <Compile Include="DateTimeExtendings.cs" />
+    <Compile Include="DateTimeExtensions.cs" />
     <Compile Include="FindAlgorithms.cs" />
     <Compile Include="OtherAlgorithms.cs" />
     <Compile Include="Program.cs" />
